Labs updated, instructions slightly expanded

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -81,7 +81,7 @@
             a 2-class problem where data on opposite corners share the same
             class. <br>
             If you produced the data following the centers order provided
-            above, you may do: <span style="font-family: Courier New,Courier,monospace;">Ytr = 2*mod(Ytr,2)-1;</span>
+            above, you may do: <span style="font-family: Courier New,Courier,monospace;">Ytr = 2*mod(C,2)-1;</span>
          </span></li>
          <br>
       </ul>
